@@ -13,7 +13,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: clock.tcl,v 1.4.2.27 2009/07/24 13:16:43 dgp Exp $
+# RCS: @(#) $Id: clock.tcl,v 1.4.2.28 2009/10/25 15:47:59 dgp Exp $
 #
 #----------------------------------------------------------------------
 
@@ -3789,11 +3789,16 @@ proc ::tcl::clock::ProcessPosixTimeZone { z } {
     }
 
     # Fill in defaults for European or US DST rules
+    # US start time is the second Sunday in March
+    # EU start time is the last Sunday in March
+    # US end time is the first Sunday in November.
+    # EU end time is the last Sunday in October
 
     if {
 	[dict get $z startDayOfYear] eq {} && [dict get $z startMonth] eq {}
     } then {
-	if {($stdHours>=0) && ($stdHours<=12)} {
+	if {($stdSignum * $stdHours>=0) && ($stdSignum * $stdHours<=12)} {
+	    # EU
 	    dict set z startWeekOfMonth 5
 	    if {$stdHours>2} {
 		dict set z startHours 2
@@ -3801,6 +3806,7 @@ proc ::tcl::clock::ProcessPosixTimeZone { z } {
 		dict set z startHours [expr {$stdHours+1}]
 	    }
 	} else {
+	    # US
 	    dict set z startWeekOfMonth 2
 	    dict set z startHours 2
 	}
@@ -3812,7 +3818,8 @@ proc ::tcl::clock::ProcessPosixTimeZone { z } {
     if {
 	[dict get $z endDayOfYear] eq {} && [dict get $z endMonth] eq {}
     } then {
-	if {($stdHours>=0) && ($stdHours<=12)} {
+	if {($stdSignum * $stdHours>=0) && ($stdSignum * $stdHours<=12)} {
+	    # EU
 	    dict set z endMonth 10
 	    dict set z endWeekOfMonth 5
 	    if {$stdHours>2} {
@@ -3821,6 +3828,7 @@ proc ::tcl::clock::ProcessPosixTimeZone { z } {
 		dict set z endHours [expr {$stdHours+2}]
 	    }
 	} else {
+	    # US
 	    dict set z endMonth 11
 	    dict set z endWeekOfMonth 1
 	    dict set z endHours 2
